Added a randomize feature for displaying questions

--- a/templates/account.html
+++ b/templates/account.html
@@ -6,6 +6,9 @@
         <title>Home</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <style>  
+        body, html {
+            height: 100vh;
+        }
          nav{
             background-color: #333; /* Background color of the navigation bar */
            color: #fff; /* Text color of the navigation links */
