--- a/templates/commsquiz.html
+++ b/templates/commsquiz.html
@@ -1,133 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Electronics MCQ's</title>
-    <link rel="stylesheet" href="static/main.css">
-
-    <style>
- 
-      nav {
-        background-color: #333; /* Background color of the navigation bar */
-            color: #fff; /* Text color of the navigation links */
-            display: flex; /* Use flexbox for layout */
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Communication Quiz</title>
+  <style>
+          body {
+            margin: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .nav-bar {
+            display: flex;
             flex-direction: row;
             align-items: center;
-            padding: -10px;
+            width: 100%;
             height: 80px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  
+            background-color: black;
         }
-        ul {
-            list-style-type: none; /* Remove bullet points from the list */
-            margin: 0; /* Remove default margin */
-            padding: 0; /* Remove default padding */
+       .nav-bar img {
+            width: 170px;
+            height: auto;
         }
-        img {
-          width: 170px;
-          height: auto;
+        .nav-bar h1 {
+            color: white;
+            margin-left: 30%;
+            font-weight: normal;
+            font-size: 25px;
+            text-shadow: 4px 2px 4px rgba(255, 255, 255, 0.8);
         }
-        li {
-            display: inline; /* Display list items horizontally */
-            margin-right: 30px; /* Add spacing between navigation links */
-        }
-        li.title {
-            font-family: Arial, sans-serif; /* Set the font family */
-            font-size: 25px; /* Set the font size */
-            font-weight: None; /* Set the font weight */         
-        }   
-        body {
-            margin: 0;
-        }               
-        li.back-to-home {
-            font-size: 17px;
-            position: relative;
-            top: -40px;
-            margin-left: 25px;
-        }
-        li.logout  {
-                font-size: 17px;
-                position: relative;
-                top: -40px;
-                left: 800px;
-        }
-        a {
-            color:#fff;
+        .nav-bar a {
+            margin-left: 35%;
+            font-size: 20px;
+            color: white;
             text-decoration: none;
         }
-      h1.course{
-        position: relative;
-        left: 25px;
-
-      }
-      h2.instructions{
-        position: relative;
-        left: 25px;
-       
-      }
-      div.content-section{
-        position: relative;
-        left: -15px;
-        top: 15px;
-      }
-      button.submit{
-        position: relative;
-        left: 40px;
-      }
-
-    </style>
-    
+        .nav-bar a:hover {
+            color: rgb(8, 90, 255);
+        }
+        .content-section {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);  
+          width: 70%;
+          height: 90%;
+          margin-top: 3%;
+          margin-bottom: 3%;
+        }
+        .content-header {
+          margin-top: 4%;
+        }
+        .content-section form {
+          margin-left: -7%;
+          margin-top: 5%;
+        }
+        .content-section button {
+          margin-left: 50%;
+          margin-bottom: 2%;
+        }
+        .flash-message {
+          position: absolute;
+          color:red;
+          font-weight: lighter;
+          text-align: center;
+          margin-top: -65%; 
+        }
+  </style>
 </head>
-
 <body>
-    <nav>
-        <ul>
+   <div class="nav-bar">
+       <img src="../static/logo.png">
+       <h1>Communications</h1>
+       <a href="{{url_for('account')}}">Home</a>
+    </div>
+    <div class="content-section">
+      <h2>Choose the best answer among the choices</h2>
+      <div class="flash-message">
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+                <p class="error-message">{{ messages[0] }}</p>    
+        {% endif %}
+        {% endwith %}
+       </div>
+      <form action="/communications" method="post">
+               {{ form.csrf_token }}
+               <input type="hidden" name="user_id" value="{{ session.user_id }}">
+               <ol type="1">
+     
+               {% for field in form %}
+               {% if field.name not in ['csrf_token', 'user_id'] %}
+  
+              <li>
+                       <p>{{ field.label.text}}</p>
+               {% for option in field.choices %}
+                   <label>
+                           <input type="radio" name="{{field.id}}" value="{{option[0]}}"> <!-- This is for user input letter choice, the field.id is automatically generated -->
+                                 {{ option[1] }} <!-- This is to display the content of the choices (access the content of the tuple in the question forms)-->
+                  </label><br>
+                {% endfor %}
+                {% if field.errors %}
+               <div class="invalid-feedback">
+                       {% for error in field.errors %}
+                           <span>{{ error }}</span><br>
+                       {% endfor %}
+               </div>
+               {% endif %}
+              </li>
+                {% endif %}
+               {% endfor %}
       
-            <img src="static\logo.png" alt="Example Image" class="logo">
-            <li class="back-to-home"><a href = "{{url_for('home')}}">Home</a></li>
-            <li class="logout"><a href = "{{url_for('logout')}}">Logout</a></li>
-           
-        </ul>
-    </nav>
-            
-            <h1 class="course">Communications</h1>
-            <h2 class="instructions">Choose the best answer among the choices</h2>
-                   
-            
-    
-            <div class="content-section">
-            <form action="/communications" method="post">
-                     {{ form.csrf_token }}
-                     <input type="hidden" name="user_id" value="{{ session.user_id }}">
-                     <ol type="1">
-           
-                     {% for field in form %}
-                     {% if field.name not in ['csrf_token', 'user_id'] %}
-        
-                    <p>
-            
-                             <p>{{field.id}} {{ field.label.text}}</p>
-                     {% for option in field.choices %}
-                         <label>
-                                 <input type="radio" name="{{field.id}}" value="{{ option[0]}}"> <!-- This is for user input letter choice, the field.id is automatically generated -->
-                                       {{ option[1] }} <!-- This is to display the content of the choices (access the content of the tuple in the question forms)-->
-                        </label><br>
-                      {% endfor %}
-                      {% if field.errors %}
-                     <div class="invalid-feedback">
-                             {% for error in field.errors %}
-                                 <span>{{ error }}</span><br>
-                             {% endfor %}
-                     </div>
-                     {% endif %}
-        
-                    </p>
-                      {% endif %}
-                     {% endfor %}
-            
-                     </ol> <br>
-                     <button type="submit" class="submit">Submit Answers</button>
-                </form>
-                </div>
-    
+               </ol> <br>      
+               <button type="submit" class="submit">Submit Answers</button>
+          </form>
+          </div>
 </body>
 </html>
