--- a/templates/account.html
+++ b/templates/account.html
@@ -269,6 +269,7 @@
         <img src="{{url_for('static', filename='logo.png')}}" alt="Example Image">
         <div class="course-list">
             <span>
+                <a href="{{url_for('quizfeed')}}">Quizzers Feed</a>
                 <a href="{{url_for('electronics')}}">Electronics</a>
                 <a href="{{url_for('communications')}}">Communications</a>
                 <a href="{{url_for('electronics')}}">GEAS</a>
