--- a/templates/quizfeed.html
+++ b/templates/quizfeed.html
@@ -19,7 +19,7 @@
   top: 2%;
   left: 2%;
   bottom: 2%;
-  width: 300px;
+  width: 350px;
   height: 500px;
   background-color: #fff;
   padding: 20px;
@@ -32,12 +32,11 @@
   flex-direction: column;
   align-items: center;
   position: absolute;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);  
   margin-top: 1%; /* Adjust this value to avoid content overlapping with the fixed element */
-  margin-left: -120px;
+  margin-left: -140px;
   padding: 20px;
   overflow-y: auto; /* Enable vertical scrolling for the scrollable portion */
-  width: 600px;
+  width: 700px;
   height: 1050px;
 }
 .quiz-post {
@@ -47,26 +46,34 @@
     justify-content: center;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);  
     margin-bottom: 1%;
-    width: 450px;
+    width: 500px;
     height: 300px;
     margin-top: 2%;
     padding: 4%;
 }
 .quiz-post img {
-
+    position: absolute;
     border-radius: 50%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
-    margin-right: 3%;
-    margin-left: -22%;
+    margin-right: 7%;
+    margin-left: -55%;
+}
+.quiz-post span {
+    margin-left: 5%;
+    font-size: 20px;
 }
 .post-header {
     display: flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
     width: 400px;
     height: 50px;
+}
+.main-header {
+    width: 200px;
+    height: 200px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); 
 }
     </style>
 </head>
@@ -74,20 +81,18 @@
 
     <div class="container">
         <div class="fixed-element">
-         
+             <span>Top Scorers per category</span>
         </div>
         <div class="scrollable-content">
-            <span></span>
+            <div class="main-header" style="text-align: center; font-size: 25px; position: fixed;">Quiz Feed Post</div>
                 {%if result_list%}
                  {%for result in result_list%}
                 <div class="quiz-post">
                     <div class = "post-header">
-                        <img src="{{result['user_pic']}}" alt="Example Image" class="user_profile_image" width="50px" height="50px">
-                        <span>{{result['username']}} answer {{result['subject']}} quiz</span> <br>
+                        <img src="{{result['user_pic']}}" alt="Example Image" class="user_profile_image" width="70px" height="70px">
+                        <span>@{{result['username']}} got <span style="color: red; margin-left: 2px;">{{result['score_pct']}}%</span> in {{result['subject']}} Quiz</span> <br>
                     </div>
-                    
-                   <span>Score: {{result['score_pct']}}%</span> 
-                   <span>Posted: {{result['difference']}} ago</span>
+                   <span>Answered {{result['difference']}}</span>
                 </div>
                 {%endfor%}
                 {%endif%}
